--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<version>2.7.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.mail</groupId>
